--- a/index.ipynb
+++ b/index.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,9 +79,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.plotly.v1+json": {
+       "data": [
+        {
+         "mode": "markers",
+         "text": [
+          "Bob: 52",
+          "Suzie: 70",
+          "Fred: 60",
+          "Edgar: 20",
+          "Steven: 32",
+          "Natalie: 45"
+         ],
+         "type": "scatter",
+         "uid": "0dd49f7a-190f-11e9-b2ff-97ac5fc86e64",
+         "x": [
+          4,
+          1,
+          5,
+          6,
+          3,
+          5
+         ],
+         "y": [
+          8,
+          11,
+          8,
+          13,
+          6,
+          4
+         ]
+        }
+       ],
+       "layout": {
+        "xaxis": {
+         "dtick": 1
+        },
+        "yaxis": {
+         "dtick": 1
+        }
+       }
+      },
+      "text/html": [
+       "<div id=\"bc59dbe9-4a9c-4b24-bb7d-36513a8e16e4\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"bc59dbe9-4a9c-4b24-bb7d-36513a8e16e4\", [{\"mode\": \"markers\", \"text\": [\"Bob: 52\", \"Suzie: 70\", \"Fred: 60\", \"Edgar: 20\", \"Steven: 32\", \"Natalie: 45\"], \"x\": [4, 1, 5, 6, 3, 5], \"y\": [8, 11, 8, 13, 6, 4], \"type\": \"scatter\", \"uid\": \"0e2adb06-190f-11e9-b2ff-97ac5fc86e64\"}], {\"xaxis\": {\"dtick\": 1}, \"yaxis\": {\"dtick\": 1}}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<div id=\"bc59dbe9-4a9c-4b24-bb7d-36513a8e16e4\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"bc59dbe9-4a9c-4b24-bb7d-36513a8e16e4\", [{\"mode\": \"markers\", \"text\": [\"Bob: 52\", \"Suzie: 70\", \"Fred: 60\", \"Edgar: 20\", \"Steven: 32\", \"Natalie: 45\"], \"x\": [4, 1, 5, 6, 3, 5], \"y\": [8, 11, 8, 13, 6, 4], \"type\": \"scatter\", \"uid\": \"0e2adb06-190f-11e9-b2ff-97ac5fc86e64\"}], {\"xaxis\": {\"dtick\": 1}, \"yaxis\": {\"dtick\": 1}}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import plotly\n",
     "\n",
@@ -349,7 +415,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
